	- Multiple word descriptions might be nice on channel registration. (#54)
	- Expirebans causing core by overflowing the ban mask buffer. (#56)
2007-??-?? - 1.1.0
	Feature/Bugfix release.
	- Fix inconsistency in SQL statements used to deal with channel masters on
		access lists. (#1)
	- Rework GET_AKICKS query to not join on channel and just use the id
		directly, since that's what we use most and the name we have elsewhere
		anyway. (#5)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)
	- Fix nickserv status.
	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
	- Enforced nicknames shouldn't be opers or admins, also set realname to
		sensible things if so desired. (#34)
	- STATS spy notice. (#17)
	- FloodServ now uses BlockHeap, now you can monitor usage in STATS z
	- Actually implement chanserv verbose, instead of pretending that we do.
		(#50)
	- Add various ORDER BY clauses to help with listing and delete by index.
		(#39)
	- Add CLEAR QUIETS, UNQUIET, and remove quiets in EXPIREBANS. (#25)
	- FloodServ clears up +q's on it's own, FloodServ GC iterates only FS
		channels more often and all valid channels. (#6)
	- ChanServ CLEAR MODES implemented. (#33)
	- FloodServ uses much less memory on startup, use dlink_list instead of
		array
	- Make FloodServ debug message less frequent but just as helpful
	- Make FloodServ leave channels when he's the last one in it or if it's
		dropped. (#55)
	- Part callback should always fire before destroy callback, move remove_user
		after part callback is fired.
	- FloodServ shouldn't keep yet another list for the channels it's joined to
	- Redo JupeServ as part of OperServ, persistent saving to db and reloaded on
		reconnect, also SQUIT deletes from the db.